# ROS2

./: CMakeLists.txt  package.xml
config/: aruco_params.yaml
launch/: dock_demo.launch.py  gazebo_world.launch.py
src/: aruco_detector.py  docking_controller.py  robot_driver.py  spawn_robot.py
urdf/: diff_robot.urdf
worlds/: docking_world.world
